--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -19,6 +19,11 @@ body {
   padding-left: 60px;
 }
 
+.center-about {
+  padding-left: 180px;
+  padding-right: 180px;
+}
+
 .link-arrow {
   font-weight: 700;
   font-size: 14px;
@@ -103,6 +108,8 @@ body {
     padding-left: 60px;
   }
 }
+
+//====================================================================Screen 768px
 
 @media screen and (max-width: 768px) {
   .center {
@@ -198,9 +205,10 @@ body {
     padding-left: 30px;
   }
   .header .header__navigation {
-    padding-top: 0;
+    padding: 0;
     width: 100%;
     margin: 0 -30px;
+
   }
   .header .header__navigation .navigation-contacts-info .info-address,
   .header .header__navigation .navigation-contacts-info .facebook,
@@ -240,9 +248,9 @@ body {
   .header .header__navigation .navigation-list .navigation-list-items {
     position: fixed;
     left: 3%;
-    top: 50%;
+    top: 34%;
     width: 94%;
-    height: 60%;
+    height: 70%;
     background: #fff;
     display: none;
     flex-direction: column;
@@ -318,7 +326,23 @@ body {
     }
   }
 
+  .curtain {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: #323264;
+    opacity: 0.7;
+    display: none;
+    z-index: 2;
+  }
+
   #nav-toggler:checked ~ .navigation-list-items {
+    display: flex;
+  }
+
+  #nav-toggler:checked ~ .curtain {
     display: flex;
   }
 
@@ -335,11 +359,12 @@ body {
   }
 
   #nav-toggler:checked ~ .header__toggler {
+
     span {
       position: fixed;
-      top: 361px;
+      top: 264px;
       left: 335px;
-      width: 6%;
+      width: 7%;
       background: #EC6F5D;
       z-index: 10;
       transform: translate(-50%, -50%) rotate(225deg);
@@ -350,22 +375,34 @@ body {
       }
     }
   }
+
+  .header__hero .header__hero-title {
+    padding-top: 125px;
+  }
   .header__hero .header__hero-offer {
     margin-bottom: 30px;
   }
+
   .offer-items {
     width: 100%;
     overflow-x: auto;
   }
+
   body .header .header__cards-items {
     grid: repeat(6, 1fr)/ 1fr;
+    gap: 0;
+    margin-bottom: 0;
+
   }
+
   .main .main__slider .slide .slide-img {
     min-width: 100%;
   }
+
   .slide-desk-title {
     font-size: 30px;
   }
+
   .main .main_partners-grid {
     grid:  repeat(6, 1fr) / 1fr;
 
@@ -373,12 +410,13 @@ body {
       display: none;
     }
   }
-  .main .main__publications .main__publications-cards {
-    grid: repeat(3, 1fr) / 1fr;
 
-    .publications-card:last-of-type {
-      grid-column: span 1;
-    }
+  .main .main__publications .main__publications-cards {
+    display: flex;
+    flex-direction: column;
+  }
+  body .footer {
+    padding: 0 30px 30px 30px;
   }
   .footer__line {
     padding-top: 30px;
@@ -424,6 +462,11 @@ body {
   }
   .footer__contacts-copyrights {
     order: 3;
+
+    span  {
+      width: 100%;
+      text-align: center;
+    }
   }
 }
 
