--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,4 +1,4 @@
-header {
+body header {
   position: relative;
   background: linear-gradient(228.57deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%);
   border-bottom-right-radius: 12px;
@@ -163,7 +163,7 @@ header:after {
     &-title {
       z-index: 2;
       text-align: center;
-      padding-top: 230px;
+      padding-top: 180px;
       margin-bottom: 305px;
       color: #fff;
     }
