--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -133,6 +133,8 @@ body {
     gap: 30px;
     width: 100%;
     overflow: hidden;
+    overflow-x: auto;
+
   }
 
   .header .header__cards-items {
@@ -174,6 +176,7 @@ body {
       .navigation-contacts-logo {
         order: 2;
         margin: 30px 0 30px;
+        z-index: 2;
       }
 
       .navigation-contacts-info {
@@ -463,7 +466,7 @@ body {
   .footer__contacts-copyrights {
     order: 3;
 
-    span  {
+    span {
       width: 100%;
       text-align: center;
     }
