--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -150,6 +150,10 @@ header:after {
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1;
+    overflow: hidden;
+    width: 100%;
+    display: flex;
+    justify-content: center;
   }
 }
 
