--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,6 +1,6 @@
 /*#region MAIN*/
 //============================================================================= main_slider
-.main__slider {
+main .main__slider {
   display: flex;
   flex-direction: column;
   gap: 30px;
